syntax="proto3";

import "google/protobuf/timestamp.proto";

option go_package = "tracer/tracer";

message Events {
  repeated Event events = 1;
}

message Logs {
  repeated Log logs = 1;
}

message Event {
  string event_id = 1;
  google.protobuf.Timestamp created_at = 2;
  bytes metadata = 3; 
}

message Log {
  string event_id = 1; 
  string log = 2; 
  bytes metadata = 3; 
  google.protobuf.Timestamp created_at = 4;
}

message TracerEmpty {}

service Tracer {
  rpc InsertEvent(Events) returns (TracerEmpty);
  rpc InsertLog(Logs) returns (TracerEmpty);
}

